[gd_scene load_steps=5 format=3 uid="uid://customizer_screen"]

[ext_resource type="Script" path="res://addons/renegade_customizer/ui/customizer_screen.gd" id="1_screen"]
[ext_resource type="PackedScene" uid="uid://turntable_preview" path="res://addons/renegade_customizer/ui/turntable_preview.tscn" id="2_turntable"]
[ext_resource type="PackedScene" uid="uid://stat_compare" path="res://addons/renegade_customizer/ui/stat_comparison_panel.tscn" id="3_stats"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.12, 0.11, 0.1, 0.95)

[node name="CustomizerScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_screen")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="MainLayout" type="HBoxContainer" parent="Background"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="LeftMargin" type="MarginContainer" parent="Background/MainLayout"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="EquipmentPanel" type="VBoxContainer" parent="Background/MainLayout/LeftMargin"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Background/MainLayout/LeftMargin/EquipmentPanel"]
layout_mode = 2
text = "EQUIPMENT"
horizontal_alignment = 1

[node name="EquipmentContainer" type="VBoxContainer" parent="Background/MainLayout/LeftMargin/EquipmentPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="TurntablePreview" parent="Background/MainLayout" instance=ExtResource("2_turntable")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="RightMargin" type="MarginContainer" parent="Background/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="InventoryPanel" type="VBoxContainer" parent="Background/MainLayout/RightMargin"]
layout_mode = 2

[node name="Title" type="Label" parent="Background/MainLayout/RightMargin/InventoryPanel"]
layout_mode = 2
text = "INVENTORY"
horizontal_alignment = 1

[node name="InventoryPlaceholder" type="PanelContainer" parent="Background/MainLayout/RightMargin/InventoryPanel"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(200, 0)

[node name="PlaceholderLabel" type="Label" parent="Background/MainLayout/RightMargin/InventoryPanel/InventoryPlaceholder"]
layout_mode = 2
text = "Wire your InventoryGridUI here
via connect_to_inventory()"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
theme_override_constants/separation = 16

[node name="FrontButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 2
text = "FRONT"

[node name="BackButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 2
text = "BACK"

[node name="ResetButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 2
text = "RESET"

[node name="CloseButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 2
text = "CLOSE [ESC]"

[node name="StatComparisonPanel" parent="." instance=ExtResource("3_stats")]
unique_name_in_owner = true
